--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,18 @@ pip-log.txt
 
 # Mac crap
 .DS_Store
+*.log
+
+*.tlog
+
+.NET Debug
+
+.NET Release
+
+Unicode Debug
+
+Unicode Release
+
+/source/UpgradeLog.htm
+
+/source/UpgradeLog2.htm
